# cbor-boink

./: Cargo.toml  build.rs  shell.nix
src/: main.rs  sample.proto
