[package]
name = "encoding-size"
version = "0.1.0"
authors = ["Toralf Wittner <tw@dtex.org>"]
edition = "2018"

[build-dependencies]
prost-build = "0.5"

[dependencies]
bytes = "0.4"
miel = { git = "https://gitlab.com/twittner/miel.git" }
parity-scale-codec = "1.0.5"
parity-scale-codec-derive = "1.0.2"
prost = "0.5"
rand = "0.7"

